# azure-switchboard

./: .pre-commit-config.yaml  CLAUDE.md  README.md  api_demo.py  justfile  pyproject.toml  switchboard.code-workspace
.github/workflows/: annotate.yml  bump-version.yml  ci.yaml  publish.yml  release.yml  test.yaml  test.yml  trunk-check.yml
.trunk/: trunk.yaml
docs/plans/: 2026-02-19-structured-outputs-design.md  2026-02-19-structured-outputs-plan.md
scratch/: switchboard_design.md  switchboard_raw_thoughts.md
src/azure_switchboard/: __init__.py  client.py  deployment.py  exceptions.py  model.py  switchboard.py
src/switchboard/: __init__.py  client.py  switchboard.py  switchboard_v1.py  switchboard_v2.py  switchboard_v3.py
test/: fixtures.py  test_client.py  test_switchboard.py  test_switchboard_v1.py  test_switchboard_v2.py  test_switchboard_v3.py  test_utils.py
tests/: conftest.py  fixtures.py  test_cascading.py  test_client.py  test_deployment.py  test_init.py  test_parse.py  test_switchboard.py  utils.py
tools/: api_demo.py  bench.py  readme_example.py
