[project]
name = "switchboard"
version = "2025.3.3"
description = "managed loadbalancing for azure openai"
readme = "README.md"
authors = [
    { name = "abizer", email = "abizer@abizer.me" }
]
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.8.0",
    "openai>=1.62.0",
    "opentelemetry-api>=1.30.0",
    "tenacity>=9.0.0",
    "wrapt>=1.17.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "bumpver>=2024.1130",
    "ipykernel>=6.29.5",
    "ipython>=8.0.0,!=9.0.0",
    "pytest>=8.3.4",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=0.25.3",
    "respx>=0.22.0",
    "rich>=13.9.4",
    "ruff>=0.9.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.bumpver]
current_version = "2025.3.3"
version_pattern = "YYYY.MM.INC0"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"',
    '^current_version = "{version}"',
]

